--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,50 +1,51 @@
 @import './../../styles/variables';
 
-.sidebar-wrapper{
-    ul{
-        background-color: inherit;
-    }
+.sidebar-wrapper {
+  ul {
+    background-color: $secondary-color;
+  }
 }
 
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    .menu-button{
+  display: flex;
+  justify-content: space-between;
+  background-color: $secondary-color;
+  .menu-button {
+  }
+}
+a {
+  color: $primary-color;
+  padding: 12px 16px;
+}
+.header-link {
+  padding: 0 16px;
+}
+
+.search-container {
+}
+
+.logo {
+  display: flex;
+}
+
+.options-tray {
+  display: flex;
+  button {
+    margin-left: 5px;
+    // background-color: $grey;
+    min-width: 40px;
+    min-height: 40px;
+    border-radius: $border-circle;
+    &:hover {
+      background-color: $grey;
+      filter: brightness(1.2);
     }
-}
-a{
-    color:$primary-color;
-    padding: 12px 16px;
-}
-.header-link{
-    padding: 0 16px;
-
-}
-
-.search-container{
-}
-
-.logo{
-    display: flex;
-}
-
-.options-tray{
-    display:flex;
-   button{
-        margin-left:5px;
-        // background-color: $grey;
-        min-width:40px;
-        min-height: 40px;
-        border-radius: $border-circle;
-        &:hover{
-            background-color: $grey;
-            filter:brightness(1.2);
-        }
-        .MuiButton-label{
-            width:30px;
-        }
-        
+    .MuiButton-label {
+      width: 30px;
     }
+  }
 }
 
-
+.default-header-auth {
+  display: flex;
+}
