--- a/src/components/pages/contact/Contact.scss
+++ b/src/components/pages/contact/Contact.scss
@@ -1,4 +1,8 @@
-.contact-form{
-    display: flex;
-    flex-direction: column;
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.MuiInput-inputMultiline {
+  color: white;
 }
